--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://trongdatdinh1.github.io/vn-tch1608-team5-etutor-web-service-frontend",
+  "homepage": "https://trongdatdinh1.github.io/vn-tch1608-team5-etutor-web-service-frontend",
   "name": "vn-tch1608-team5-etutor-web-service-frontend",
   "version": "0.1.0",
   "private": true,
@@ -10,11 +10,17 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-big-calendar": "^0.24.1",
+    "react-datepicker": "^2.14.1",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.13.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-time-picker": "^3.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
