--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.13.2",
     "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.13.0",
