--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-big-calendar": "^0.24.1",
+    "react-bootstrap": "^1.0.0",
     "react-datepicker": "^2.14.1",
     "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.13.0",
@@ -23,7 +24,8 @@
     "react-scripts": "3.4.0",
     "react-time-picker": "^3.9.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uid": "^1.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
